[CORE-2.9-LTS] Pushing updated versions of tracer and services common